# forge3d

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.json  settings.local.json
.claude/hooks/: check_physics_imports.sh
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/animation/: index.html
api/app/: index.html
api/audio/: index.html
api/backends/: index.html
api/body/: index.html
api/camera/: index.html
api/character/: index.html
api/ecs/: index.html
api/editor/: index.html
api/input/: index.html
api/particle/: index.html
api/profiler/: index.html
api/rendering/: index.html
api/robot/: index.html
api/scene/: index.html
api/shapes/: index.html
api/world/: index.html
apps/: game.py
apps/fps_battleroyal/: __init__.py  camera.py  config.py  enemy.py  hud.py  main.py  player.py  weapon.py  world_builder.py  zone.py
apps/game/: README.md  camera_rig.py  enemies.py  game.py  hud.py  level.py  main.py  player.py  renderer.py  scene.py  settings.py
apps/robot_rl/: dashboard.py
apps/showcase/: __init__.py  main.py  models.py  world_builder.py
architecture/: index.html
archive/: README.md
archive/demos/: interactive_robot.py
archive/examples/: 02_bounce_hq_video.py  02_bouncing_ball.py
assets/: arm_6dof.py
changelog/: index.html
contributing/: index.html
demos/: LIBRARY_NOTES.md  README.md  cascade_gauntlet.py  forge_drive.py  forge_racer.py  physics_showcase.py  training_watch.py
docs/: PROGRESS.md  ROADMAP.md  ROADMAP_v2.md  WORKFLOW.md  forge3d_improvement_notes.md
docs/benchmarks/: p25.md  p26.md  v2_summary.md
docs/specs/: README.md  SPEC.template.md  phase-0-bootstrap.md  phase-1-math-and-2dof.md  phase-10-pick-and-place.md  phase-11-jax-perf.md  phase-12-gjk-friction.md  phase-13-modern-rigid-body.md  phase-14-pypi-cicd.md  phase-15-docs-site.md  phase-16-joints-constraints.md  phase-17-collision-events.md  phase-18-scene-serialization.md  phase-19-collision-layers.md  phase-2-ndof-dynamics.md  phase-20-api-hardening.md  phase-21-heightfield-terrain.md  phase-22-ccd-compound.md  phase-23-performance.md  phase-24-v1-release.md  phase-25-native-core.md  phase-26-modern-render.md  phase-27-ecs.md  phase-28-audio.md  phase-29-animation.md  phase-3-snapshot-realtime.md  phase-30-scene-management.md  phase-31-particle.md  phase-32-ui.md  phase-33-editor.md  phase-34-vulkan.md  phase-35-v2-release.md  phase-4-facade-api.md  phase-5-collision-contact.md  phase-6-hq-renderer.md  phase-7-robot.md  phase-8-gymnasium-env.md  phase-9-rl-training.md
docs_src/: architecture.md  changelog.md  contributing.md  index.md  install.md  quickstart.md  whats_new_v1_1.md  whats_new_v2_1.md
docs_src/api/: animation.md  app.md  audio.md  backends.md  body.md  camera.md  character.md  ecs.md  editor.md  input.md  particle.md  (+6 more)
examples/: 01_falling_box_realtime.py  03_robot_interactive.py  04_friction_grasp.py  05_ecs_scene.py
install/: index.html
js/: lang-switch.js
ko/: index.html
migration_v2/: index.html
quickstart/: index.html
search/: search_index.json
src/forge3d_core/: Cargo.toml
src/forge3d_core/benches/: physics_bench.rs
src/forge3d_core/src/: bvh.rs  gjk_epa.rs  lib.rs  math_simd.rs  pgs_solver.rs
tests/: conftest.py  test_aba.py  test_api_usability.py  test_app.py  test_backend.py  test_camera.py  test_collision.py  test_conservation.py  test_contact_physics.py  test_crba.py  test_fd_id_roundtrip.py  test_hq_renderer.py  test_import.py  test_input.py  test_math.py  test_mesh_and_io.py  test_p11_jax.py  test_p12_friction.py  test_p13_rigid_body.py  test_p16_joints.py  test_p17_events.py  test_p18_serialization.py  test_p19_layers.py  test_p20_api.py  test_p21_terrain.py  test_p23_performance.py  test_p25_rust_core.py  test_p26_deferred_render.py  test_p27_ecs.py  test_p28_audio.py  test_p29_animation.py  test_p30_scene.py  test_p31_particle.py  test_p32_ui.py  test_p33_editor.py  test_p34_wgpu.py  test_p9_training.py  test_pick_place.py  test_reach_env.py  test_realtime_smoke.py  (+4 more)
validation/: README.md  arm_6dof.urdf  pybullet_compare.py  urdf_gen.py
whats_new_v1_1/: index.html
whats_new_v2_1/: index.html
(+168 files in other folders)
